--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this repository is created to practice webpack features and practice on basic git cmds",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/shivalr03/bundler#readme",
   "devDependencies": {
+    "bootstrap": "^4.5.2",
+    "css-loader": "^4.2.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
