--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
+    "particles.js": "^2.0.0",
     "popper.js": "^1.16.1",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
